--- a/routes/index/index.hbs
+++ b/routes/index/index.hbs
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/png" href="css/assets/favicon.png" />
   <link rel="stylesheet" href="css/adapt.css" />
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="vanilla/css/vanilla.css">
   <script type="text/javascript" src="modernizr.js"></script>
   <script type="text/javascript" src="ckeditorTranslationFr.js"></script>
   <script type="text/javascript" src="ckeditor.js"></script>
