fixed apply button styling

--- a/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
+++ b/frontend/src/modules/guidedTourPinFinder/templates/guidedTourPinFinderModal.hbs
@@ -6,7 +6,7 @@
       </div>
     </div>
     <div class="pin-finder-menu-bar">
-      <button class="apply btn primary">{{ t 'app.coloursave' }}</button>
+      <button class="apply btn action-primary">{{ t 'app.coloursave' }}</button>
       <button class="cancel btn action-secondary">{{ t 'app.themepresetcancel' }}</button>
       <div class="pin-finder-controls">
         <div class="position">{{ t 'app.layoutleft' }}: <span class="left"></span></div>
