--- a/frontend/src/modules/scaffold/templates/field.hbs
+++ b/frontend/src/modules/scaffold/templates/field.hbs
@@ -1,6 +1,6 @@
 {{! ESDC - modified interpolation to use new translated labels }}
 <div
-  class="field{{#if title}} field-{{stringToClassName title}}{{else}}{{#if legend}} field-object field-object-{{stringToClassName legend}}{{/if}}{{/if}}{{#if isDefaultValue}} is-default-value{{/if}}"
+  class="field{{#if title}} field-{{stringToClassName title}}{{else}}{{#if legend}} field-object field-object-{{stringToClassName legend}}{{/if}}{{/if}}{{#if isDefaultValue}} is-default-value{{/if}}{{#if hiddenField}} display-none{{/if}}"
   data-editor-id="{{editorId}}" data-type="{{#if inputType.type}}{{inputType.type}}{{else}}{{inputType}}{{/if}}">
   {{#unless noTitle}}
   {{#if title}}
