WIP simulation fields and finder

--- a/frontend/src/modules/scaffold/less/modal.less
+++ b/frontend/src/modules/scaffold/less/modal.less
@@ -14,12 +14,20 @@
     background: #f9fbfc;
   }
 
+  & + & + & > .scaffold-items-modal-sidebar {
+    width: 674px;
+    background: #f3f3f3;
+  }
+
   > .scaffold-items-modal-sidebar {
     background: #ffffff;
   }
 
   & + & > .scaffold-items-modal-sidebar .fieldset-object {
     background: #f9fbfc;
+  }
+  & + & + & > .scaffold-items-modal-sidebar .fieldset-object {
+    background: #f3f3f3;
   }
 }
 
