added style for scaffold items modal sidebar

--- a/frontend/src/modules/scaffold/less/modal.less
+++ b/frontend/src/modules/scaffold/less/modal.less
@@ -19,6 +19,11 @@
     background: #f3f3f3;
   }
 
+  & + & + & + & > .scaffold-items-modal-sidebar {
+    width: 636px;
+    background: #ede4e4;
+  }
+
   > .scaffold-items-modal-sidebar {
     background: #ffffff;
   }
@@ -28,6 +33,9 @@
   }
   & + & + & > .scaffold-items-modal-sidebar .fieldset-object {
     background: #f3f3f3;
+  }
+  & + & + & + & > .scaffold-items-modal-sidebar .fieldset-object {
+    background: #ede4e4;
   }
 }
 
