fixed typo for screenID field

--- a/frontend/src/modules/scaffold/templates/scaffoldUniqueField.hbs
+++ b/frontend/src/modules/scaffold/templates/scaffoldUniqueField.hbs
@@ -1,2 +1,2 @@
-<input type="text" id="_screendID" name="_screendID" autocomplete="off" value="{{uniqueID}}"/>
+<input type="text" id="_screenID" name="_screenID" autocomplete="off" value="{{uniqueID}}"/>
 <div class="field-error" data-error=""></div>
