simulation translations update

--- a/frontend/src/modules/scaffold/templates/scaffoldReadableID.hbs
+++ b/frontend/src/modules/scaffold/templates/scaffoldReadableID.hbs
@@ -1,3 +1,3 @@
-<div class="readable-id-label">Readable ID: <span class="readable-id-value">{{readableID}}</span></div>
+<div class="readable-id-label">{{t 'app.readableID'}}: <span class="readable-id-value">{{readableID}}</span></div>
 <input id="_readableID" name="_readableID" type="text" autocomplete="off">
 <div class="field-error" data-error=""></div>
