--- a/frontend/src/modules/scaffold/templates/listItem.hbs
+++ b/frontend/src/modules/scaffold/templates/listItem.hbs
@@ -1,5 +1,5 @@
 <div class="list-item">
   <span data-editor></span>
-  <button class="btn secondary fa fa-clone" type="button" data-action="clone"></button>
-  <button class="btn warning fa fa-close" type="button" data-action="remove"></button>
+  <button title="{{ t 'app.clone' }}" class="field-help btn secondary fa fa-clone" type="button" data-action="clone"></button>
+  <button title="{{ t 'app.delete' }}" class="btn warning fa fa-close" type="button" data-action="remove"></button>
 </div>
