mimetypes style fix

--- a/frontend/src/core/less/forms.less
+++ b/frontend/src/core/less/forms.less
@@ -76,3 +76,12 @@ input:disabled, textarea:disabled {
   margin-top: 1rem;
   display: block;
 }
+
+.maxSize {
+    margin-top:10px; 
+  }
+  
+  .maxSize li {
+    list-style: none;
+    margin-top: 5px;
+  }
