replaced pin editor with zone editor

--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -1,56 +1,49 @@
-#target {
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background-color: transparent;
-    border-radius: 50%;
-    user-select: none;
-    z-index: 99999999 !important;
-    left: 0px;
-    top: 0px;
+.guided-tour-pin-finder-modal .cropper-container:not(:hover) .cropper-view-box {
+    outline: none;
 }
 
-#bullseye {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    outline: 1px solid black;
-    cursor: move;
-    user-select: none;
-    z-index: 99999999 !important;
-    left: 0px;
-    top: 0px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    transition: opacity 0.2s;
-    &:active {
-        opacity: 0.8;
+.guided-tour-pin-finder-modal .cropper-container:not(:hover) .cropper-point,
+.guided-tour-pin-finder-modal .cropper-container:not(:hover) .cropper-line,
+.guided-tour-pin-finder-modal .cropper-container:not(:hover) .cropper-dashed,
+.guided-tour-pin-finder-modal .cropper-container:not(:hover) .cropper-center {
+    display: none;
+}
+
+
+.shepherd-element[data-popper-placement="left"] {
+    &.small {
+        margin-left: -12.5px;
     }
-    &:active > div {
-        opacity: 0.2;
-    }
-    div:nth-child(2), div:nth-child(3) {
-        background: #fff;
-    }
-    div:nth-child(1), div:nth-child(4) {
-        background: #000;
-    }
-    .box1 {
-        border-radius: 50px 0 0 0;
+    &.large {
+        margin-left: -25px;
     }
 
-    .box2 {
-        border-radius: 0 50px 0 0;
-    }
+}
 
-    .box3 {
-        border-radius: 0 0 0 50px;
+.shepherd-element[data-popper-placement="right"] {
+    &.small {
+        margin-left: 12.5px;
     }
+    &.large {
+        margin-left: 25px;
+    }
+}
 
-    .box4 {
-        border-radius: 0 0 50px 0;
+.shepherd-element[data-popper-placement="top"] {
+    &.small {
+        margin-top: -12.5px;
+    }
+    &.large {
+        margin-top: -25px;
+    }
+}
+
+.shepherd-element[data-popper-placement="bottom"] {
+    &.small {
+        margin-top: 12.5px;
+    }
+    &.large {
+        margin-top: 25px;
     }
 }
 
@@ -66,126 +59,159 @@
     .shepherd-content {
         user-select: none;
     }
-}
 
-.pin-finder-overlay {
-    width: 95%;
-    height: 95%;
-    position: absolute;
-    left: 2.5%;
-    top: 2.5%;
-    background: #E6E6E6;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-
-.pin-finder-inner {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-
-    .pin-finder-image-container {
-        height: auto;
-        padding: 0;
+    .pin-finder-overlay {
+        width: 95%;
+        height: 95%;
+        position: absolute;
+        left: 2.5%;
+        top: 2.5%;
         background: #E6E6E6;
-        width: calc(100% - 125px);
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    }
+
+
+    .pin-finder-inner {
+        height: 100%;
         display: flex;
+        flex-direction: row;
+
+        .pin-finder-image-container {
+            height: auto;
+            padding: 0;
+            background: #E6E6E6;
+            width: calc(100% - 125px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow-x: hidden;
+
+            .pin-finder-image-wrapper {
+                height: auto;
+                user-select: none;
+                margin: auto;
+                background: #fff;
+                padding: 0;
+                max-width: 904px;
+
+                img {
+                    width: 100%;
+                }
+
+                &.half-width {
+                    max-width: 452px !important;
+                }
+
+                &.force-full-width {
+                    width: 100%;
+                }
+
+                &.spotlight-disabled {
+                    .cropper-modal {
+                        opacity: 0;
+                    }
+                }
+
+                &.visible-border {
+                    .cropper-container:not(:hover) .cropper-crop-box {
+                        outline: 4px solid var(--shepherd-border-color)
+                    }
+
+                }
+            }
+        }
+
+
+
+        .pin-finder-menu-bar {
+            height: auto;
+            width: 125px;
+            background: #263944;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: flex-start;
+            padding: 15px;
+
+            button {
+                width: 100%;
+            }
+
+            .apply {
+                margin-bottom: 5px;
+            }
+
+            .pin-finder-controls {
+                color: #fff;
+                width: 100%;
+                margin-top: 15px;
+
+                div.position {
+                    margin-bottom: 5px;
+                    user-select: none;
+                }
+
+                .pin-finder-checkbox {
+                    display: flex;
+                    align-items: center;
+                    margin-top: 15px;
+
+                    input[type="checkbox"] {
+                        margin-right: 5px;
+                    }
+
+                    label {
+                        margin: 0;
+                    }
+                }
+
+                label {
+                    display: block;
+                    margin-top: 15px;
+                    margin-bottom: 5px;
+                }
+            }
+        }
+    }
+
+    .pin-finder-spectrum {
+        width: 317px;
+    }
+
+    .pin-finder-mobile-fallback-message-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        overflow-y: auto;
+        padding: 10px;
+        text-align: center;
 
-        .pin-finder-image-wrapper {
-            height: auto;
-            user-select: none;
-            margin: auto;
-            background: #fff;
-            padding: 30px;
-            max-width: 904px;
-
-            img {
-                width: 100%;
-            }
-
-            &.half-width {
-                max-width: 452px!important;
-            }
-            &.force-full-width {
-                width: 100%;
-            }
+        p {
+            margin: 10px;
+            max-width: 75%;
         }
-    }
-
-
-
-    .pin-finder-menu-bar {
-        height: auto;
-        width: 125px;
-        background: #263944;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: flex-start;
-        padding: 15px;
 
         button {
-            width: 100%;
-        }
-
-        .apply {
-            margin-bottom: 5px;
-        }
-
-        .pin-finder-controls {
-            color: #fff;
-            width: 100%;
-            margin-top: 15px;
-            div.position {
-                margin-bottom: 5px;
-                user-select: none;
-            }
-            label {
-                display: block;
-                margin-top: 15px;
-                margin-bottom: 5px;
-            }
+            background: @adapt-primary-color;
         }
     }
-}
 
-.pin-finder-spectrum {
-    width: 317px;
-}
+    @media (max-width: 700px) {
 
-.pin-finder-mobile-fallback-message-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    text-align: center;
-    p {
-        margin: 10px;
-        max-width: 75%;
+        .pin-finder-image-container,
+        .shepherd-element,
+        .pin-finder-menu-bar,
+        #target {
+            display: none !important;
+        }
     }
 
-    button {
-        background: @adapt-primary-color;
+    @media (min-width: 701px) {
+        .pin-finder-mobile-fallback-message-container {
+            display: none !important;
+        }
     }
-}
 
-@media (max-width: 700px) {
 
-    .pin-finder-image-container,
-    .shepherd-element,
-    .pin-finder-menu-bar,
-    #target {
-        display: none !important;
-    }
-}
-
-@media (min-width: 701px) {
-    .pin-finder-mobile-fallback-message-container {
-        display: none !important;
-    }
 }
