--- a/frontend/src/modules/hotgraphicPinFinder/less/hotgraphicPinFinderModal.less
+++ b/frontend/src/modules/hotgraphicPinFinder/less/hotgraphicPinFinderModal.less
@@ -100,7 +100,7 @@
             user-select: none;
             margin: auto;
             background: #fff;
-            padding: 30px;
+            padding: 0;
             max-width: 904px;
 
             img {
