missing translations + title issue

--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -9,6 +9,12 @@
     display: none;
 }
 
+.shepherd-element {
+    .shepherd-title {
+        width: min-content;
+    }
+}
+
 
 .shepherd-element[data-popper-placement="left"] {
     &.small {
